--- a/examples/frontend.conf
+++ b/examples/frontend.conf
@@ -1,4 +1,4 @@
-# A modd.conf for front-end development using React, Browserify, Babel, and
+# A ppow.conf for front-end development using React, Browserify, Babel, and
 # ESLint. Livereload and HTTP serving is managed by devd.
 
 @bin = ./node_modules/.bin
