--- a/examples/go.conf
+++ b/examples/go.conf
@@ -1,4 +1,4 @@
-# A basic modd.conf file for Go development.
+# A basic ppow.conf file for Go development.
 
 # Run go test on ALL modules on startup, and subsequently only on modules
 # containing changes.
