--- a/ppow.conf
+++ b/ppow.conf
@@ -1,10 +1,10 @@
 
 **/*.go {
     prep: go test ./...
-    prep: go install ./cmd/modd
+    prep: go install ./cmd/ppow
     daemon: "
-        #modd
+        #ppow
         cd test
-        modd -f mixed.conf
+        ppow -f mixed.conf
     "
 }
