--- a/examples/go.ppow.toml
+++ b/examples/go.ppow.toml
@@ -3,7 +3,7 @@
 # Run go test on ALL modules on startup, and subsequently only on modules
 # containing changes.
 [[block]]
-include = "**/*.go"
+include = ["**/*.go"]
 
 [[block.prep]]
 cmd = "go test @dirmods"
